5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1630_2921.log
== TEST (2019-04-02 17:06:08) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

dg2= float(g2-(g2*(desconto)))

valor=float(round(g1+dg2))

print(dg2)
print(valor)
-- OUTPUT:
-7854.0
-7712.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:06:51) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

dg2= float(g2-(g2*(desconto)))

valor=float(round(g1+dg2))

print(dg2)
print(valor)
-- EXECUTION TIME:
0.1517
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
-7854.0
-7712.0
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
-11960.3126
-11860.0
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
-7266.319400000001
-7164.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:06:53) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

dg2= float(g2-(g2*(desconto)))

valor=float(round(g1+dg2))

print(dg2)
print(valor)
-- OUTPUT:
-7854.0
-7712.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:07:12) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)
-- OUTPUT:
89.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:08:59) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

valor=round(desconto+g1),2

print(valor)
-- OUTPUT:
89.0
(231, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:15) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

valor=float(round(g1+desconto),2)

print(valor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    valor=float(round(g1+desconto),2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:49) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

valor=round(float(g1+desconto),2

print(valor)
-- ERROR:
File "XXXX", line 10
    print(valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:10:59) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

valor=round(float(g1+desconto),2)

print(valor)
-- OUTPUT:
89.0
231.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:11:19) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

valor=round(float(g1+desconto),2)

print(valor)
-- EXECUTION TIME:
0.153447
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.0
231.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.74
209.73
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.62
187.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:12:55) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

total=float(g2-(g2*(desconto)))

valor=round(float(g1+desconto),2)

print(valor)
-- OUTPUT:
89.0
231.35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:13:08) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)

total=float(g2-(g2*(desconto)))

valor=round(float(g1+desconto),2)

print(valor)
-- EXECUTION TIME:
0.226769
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.0
231.35
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.74
209.73
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.62
187.74
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:30:51) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-25/100)

print(desconto)


-- OUTPUT:
89.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:31:32) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100))

print(desconto)


-- ERROR:
File "XXXX", line 6
    print(desconto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:31:43) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

print(desconto)


-- OUTPUT:
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:32:50) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(total)


-- OUTPUT:
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:33:33) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(round(total,2))


-- OUTPUT:
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:33:44) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(round(total,2))


-- EXECUTION TIME:
0.163559
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:34:17) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:34:27) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- EXECUTION TIME:
0.160245
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:34:33) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- EXECUTION TIME:
0.160761
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:35:07) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1-desconto)

print(desconto)
print(round(total,2))


-- OUTPUT:
66.9375
75.41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:35:25) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:35:53) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- EXECUTION TIME:
0.154709
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:35:55) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:36:13) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- EXECUTION TIME:
0.141148
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:37:38) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(desconto)
print(round(total,2))


-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:39:22) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(g2-desconto)
print(round(total,2))


-- OUTPUT:
22.3125
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:39:34) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(g2-desconto)
print(round(total,2))


-- OUTPUT:
22.3125
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:39:36) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))

total=float(g1+desconto)

print(g2-desconto)
print(round(total,2))


-- EXECUTION TIME:
0.1785
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
22.3125
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
27.497500000000002
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
21.4675
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:40:47) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

total=float(g1+desconto)

print(g2d-desconto)
print(round(total,2))


-- OUTPUT:
-44.625
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:41:10) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

total=float(g1+desconto)

print(g2d)
print(round(total,2))


-- OUTPUT:
22.3125
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:41:20) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

total=float(g1+desconto)

print(g2d)
print(round(total,2))


-- EXECUTION TIME:
0.178329
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
22.3125
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
27.497500000000002
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
21.4675
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:41:43) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

total=float(g1+desconto)

print(g2d+desconto)
print(round(total,2))


-- OUTPUT:
89.25
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:41:52) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

total=float(g1+desconto)

print(g2d+desconto)
print(round(total,2))


-- EXECUTION TIME:
0.127107
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
89.25
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
109.99
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
85.87
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:02) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

total=float(g1+desconto)

print(g2d-desconto)
print(round(total,2))


-- OUTPUT:
-44.625
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:27) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

print(g2d)


-- OUTPUT:
22.3125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:44:08) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

print(desconto)

print(round(g1+desconto)+g2d),2


-- OUTPUT:
66.9375
231.3125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:44:19) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

print(desconto)

print(round(g1+desconto)+g2d),2


-- EXECUTION TIME:
0.220518
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
231.3125
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
209.4975
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
188.4675
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:12) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

vg2=(g2-desconto)
print(vg2)



-- OUTPUT:
22.3125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:45:48) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
g2d=(g2-desconto)

print(g2d)




-- OUTPUT:
22.3125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:46:47) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=float(g2-(g2*(25/100)))
print(desconto)






-- OUTPUT:
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:44) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= round(g1+vg2),2

print(valort)






-- OUTPUT:
(209, 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:16) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= round(g1+vg2)

print(vg2)
print(valort)






-- OUTPUT:
66.9375
209
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:39) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= float(round(g1+vg2)

print(vg2)
print(valort)






-- ERROR:
File "XXXX", line 9
    print(vg2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:48) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= float(round(g1+vg2))

print(vg2)
print(valort)






-- OUTPUT:
66.9375
209.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:57) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= float(round(g1+vg2))

print(vg2)
print(valort)






-- EXECUTION TIME:
0.118108
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.0
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.0
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
167.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:39) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= float(round(g1+vg2),2)

print(vg2)
print(valort)






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valort= float(round(g1+vg2),2)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:51) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= float(round(g1+vg2)

print(vg2)
print(valort)






-- ERROR:
File "XXXX", line 9
    print(vg2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:35) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(round(g2-(g2*(25/100),2))
valort= float(round(g1+vg2),2)

print(vg2)
print(valort)






-- ERROR:
File "XXXX", line 7
    valort= float(round(g1+vg2),2)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:16) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))
valort= float(g1+vg2)

print(vg2)






-- OUTPUT:
66.9375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:52:45) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))

valort= float(g1+vg2)
print(valort)







-- EXECUTION TIME:
0.149334
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:52:48) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100)))

valort= float(g1+vg2)
print(valort)







-- OUTPUT:
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:41) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=round(float(g2-(g2*(25/100),2))

valort= round(float(g1+vg2),2

print(vg2)
print(valort)









-- ERROR:
File "XXXX", line 8
    valort= round(float(g1+vg2),2
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:54:27) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100),2))

valort= float(g1+vg2)

print(round(vg2),2)
print(round(valort),2)









-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    vg2=float(g2-(g2*(25/100),2))
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:55:01) 
-- CODE:
g1= float(input("Valor do jogo 1: "))
g2= float(input("Valor do jogo 2: "))

desconto=(g2-25/100)

vg2=float(g2-(g2*(25/100),2))

valort= round(,2(float(g1+vg2)

print(vg2)
print(valort)









-- ERROR:
File "XXXX", line 8
    valort= round(,2(float(g1+vg2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
